fix horizontal scrolling on the mobile

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -24,6 +24,10 @@ main{
 		width: 340px;
 		text-align: center;
 
+		@media (max-width: 767px) {
+			width: 320px;
+		}
+
 		h3 {
 			font-size: 22px;
 			font-weight: 700;
